--- a/src/index.html
+++ b/src/index.html
@@ -28,20 +28,16 @@
 <body>
   <ngtube-app>
     <!--<div class="signal"></div>-->
-    <div class="center-screen">
-      <div class="preloader-wrapper big active valign">
-      <div class="spinner-layer spinner-blue-only">
-        <div class="circle-clipper left">
-          <div class="circle"></div>
-        </div><div class="gap-patch">
-          <div class="circle"></div>
-        </div><div class="circle-clipper right">
-          <div class="circle"></div>
-        </div>
+    <div class="loading-area">
+      
+      <div class="spinner-load">
+        <div class="rect1"></div>
+        <div class="rect2"></div>
+        <div class="rect3"></div>
+        <div class="rect4"></div>
+        <div class="rect5"></div>
       </div>
     </div>
-    </div>
-      
   </ngtube-app>
   <script
 			  src="https://code.jquery.com/jquery-2.2.3.min.js"
