--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-  <link rel="stylesheet" type="text/css" href="styles.css">
-
+  <link rel="stylesheet" type="text/css" href="preloader.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.6/css/materialize.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -27,9 +26,7 @@
 </head>
 <body>
   <ngtube-app>
-    <!--<div class="signal"></div>-->
     <div class="loading-area">
-      
       <div class="spinner-load">
         <div class="rect1"></div>
         <div class="rect2"></div>
